# epc-api-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
api/: client.py  environment.py  exceptions.py  schemas.py
docs/: conf.py
downloader/: client.py  downloader.py  exceptions.py
epc_api/: client.py  exceptions.py
epc_api_python/: client.py  exceptions.py
epc_data_exploration/: environment.py
examples/: basic_example.py  csv_example.py  test_example.py  zip_example.py
requirements/: prod.txt  test.txt
tests/: context.py  test_advanced.py  test_basic.py  test_client_init.py  test_endpoints.py  test_schema.py
