# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epc-api-python"
version = "1.0.0"
description = "Interface the UK Govenment EPC api"
readme = "README.md"
authors = [{ name = "Khalim Conn-Kowlessar" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
requires-python = ">=3.7"
keywords = ["epc_api"]

[tool.setuptools]
packages = ["epc_api"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/prod.txt"]}

[project.optional-dependencies]
dev = ["pytest>=6.2.3", "pytest-cov>=4.0.0", "black>=19.10b0", "isort", "prospector"]

[project.urls]
Homepage = "https://github.com/KhalimCK/epc-api-python"


[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

